// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeEntriesSection should render a grid of tree entries at the root 1`] = `
<DocumentFragment>
  <div>
    <a
      class="anchorLink test-page-file-decorable treeEntry font-weight-bold test-tree-entry-directory treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/tree/src"
      title="src"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
            />
          </svg>
          src/
        </span>
        <div
          class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
        >
          <div
            class="d-flex align-items-center fileDecoration"
          >
            <small
              class="text-monospace font-weight-normal test-file-decoration-text after"
              data-placement="bottom"
            >
              src decoration
            </small>
          </div>
        </div>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry font-weight-bold test-tree-entry-directory treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/tree/testdata"
      title="testdata"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
            />
          </svg>
          testdata/
        </span>
        <div
          class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
        >
          <div
            class="d-flex align-items-center fileDecoration"
          >
            <small
              class="text-monospace font-weight-normal test-file-decoration-text after"
              data-placement="bottom"
            >
              testdata decoration
            </small>
          </div>
        </div>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry test-tree-entry-file treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/blob/.editorconfig"
      title=".editorconfig"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
            />
          </svg>
          .editorconfig
        </span>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry test-tree-entry-file treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/blob/.eslintrc.json"
      title=".eslintrc.json"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
            />
          </svg>
          .eslintrc.json
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`TreeEntriesSection should render a grid of tree entries in a subdirectory 1`] = `
<DocumentFragment>
  <div>
    <a
      class="anchorLink test-page-file-decorable treeEntry font-weight-bold test-tree-entry-directory treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/tree/src/testutils"
      title="src/testutils"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
            />
          </svg>
          testutils/
        </span>
        <div
          class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
        >
          <div
            class="d-flex align-items-center fileDecoration"
          >
            <small
              class="text-monospace font-weight-normal test-file-decoration-text after"
              data-placement="bottom"
            >
              testutils decoration
            </small>
          </div>
        </div>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry font-weight-bold test-tree-entry-directory treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/tree/src/typings"
      title="src/typings"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
            />
          </svg>
          typings/
        </span>
        <div
          class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
        >
          <div
            class="d-flex align-items-center fileDecoration"
          >
            <small
              class="text-monospace font-weight-normal test-file-decoration-text after"
              data-placement="bottom"
            >
              typings decoration
            </small>
          </div>
        </div>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry test-tree-entry-file treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/blob/src/errors.ts"
      title="src/errors.ts"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
            />
          </svg>
          errors.ts
        </span>
      </div>
    </a>
    <a
      class="anchorLink test-page-file-decorable treeEntry test-tree-entry-file treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/sourcegraph/codeintellify/-/blob/src/helpers.ts"
      title="src/helpers.ts"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z"
            />
          </svg>
          helpers.ts
        </span>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`TreeEntriesSection should render only direct children 1`] = `
<DocumentFragment>
  <div>
    <a
      class="anchorLink test-page-file-decorable treeEntry font-weight-bold test-tree-entry-directory treeEntryNoColumns"
      data-testid="tree-entry"
      href="/github.com/vanadium/core/-/tree/x/ref"
      title="x/ref"
    >
      <div
        class="d-flex align-items-center justify-content-between test-file-decorable-name overflow-hidden"
      >
        <span>
          <svg
            class="mdi-icon iconInline mr-1"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M20,18H4V8H20M20,6H12L10,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V8C22,6.89 21.1,6 20,6Z"
            />
          </svg>
          ref/
        </span>
        <div
          class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
        >
          <div
            class="d-flex align-items-center fileDecoration"
          >
            <small
              class="text-monospace font-weight-normal test-file-decoration-text after"
              data-placement="bottom"
            >
              ref decoration
            </small>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
